@@ -86,6 +86,7 @@ Collate:
     'stat-interpolate-methods.R'
     'geom-crosshair-tern.R'
     'geom-point-swap.R'
+    'annotation-raster-tern.R'
 NeedsCompilation: no
 Author: Nicholas Hamilton [aut, cre]
 Maintainer: Nicholas Hamilton <nick@ggtern.com>
