@@ -22,6 +22,7 @@ export(GeomLisoprop)
 export(GeomLline)
 export(GeomLmark)
 export(GeomPointSwap)
+export(GeomRasterAnnTern)
 export(GeomRisoprop)
 export(GeomRline)
 export(GeomRmark)
@@ -46,6 +47,7 @@ export(Tlab)
 export(Tline)
 export(Wlab)
 export(aes)
+export(annotation_raster_tern)
 export(arrangeGrob)
 export(atomic_percent)
 export(calc_element)
